# posternerf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  viewer.py
plenoctree/: CMakeLists.txt  README.md  __init__.py  pybind.cpp  tree.py  utils.py
plenoctree/src/: data_spec.h  math_utils.h  octree.cpp  octree.h  render_options.h  sampling.h  viewer.h
plenoctree/src/ext/glad/: CMakeLists.txt
plenoctree/src/ext/glad/include/glad/: glad.h
plenoctree/src/ext/glad/src/: glad.c
plenoctree/src/sampling/: sampling.cu
plenoctree/src/viewer/: camera.cpp  camera.h  palette.cu  palette.h  viewer.cpp  viewer.cu
